@@ -1,3 +1,8 @@
+2006-05-24  Chris Toshok  <toshok@ximian.com>
+
+	* SCSharp/SCSharp.UI/GameScreen.cs: track the Unit currently under
+	the cursor, and when we click on it, spew a little info about it.
+
 2006-05-24  Chris Toshok  <toshok@hungry.com>
 
 	* SCSharp/SCSharp.UI/Game.cs (DisplayTitle): use the FirstPainted
